<resources>
    <string name="app_name">7MinuteWorkout</string>
    <string name="image">image</string>
    <string name="str_start">START</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="timer_start">10</string>
    <string name="exercise_name">Exercise name</string>
    <string name="progressBarExercise_max">30</string>
    <string name="upcoming_exercise">UPCOMING EXERCISE:</string>
    <string name="text_end">END</string>
    <string name="text_congratulations">Congratulations!</string>
    <string name="text_workout_finished">You have finished the workout!</string>
    <string name="text_finish">FINISH</string>
    <string name="txt_conformation_question">Are you sure?</string>
    <string name="txt_conformation">This will stop your workout. You\'ve come this far,are you sure you want to quit?</string>
    <string name="text_yes">YES</string>
    <string name="text_no">NO</string>
    <string name="BMI">BMI</string>
    <string name="calculator">calculator</string>
    <string name="calculate">CALCULATE BMI</string>
    <string name="txt_hint_weight_metric">WEIGHT (in kg)</string>
    <string name="txt_hint_height_metric">HEIGHT (in cm)</string>
    <string name="txt_yourBMI">Your BMI:</string>
    <string name="temp">temp</string>
    <string name="txt_hint_weight_imperial">"WEIGHT (in lbs) "</string>
    <string name="txt_hint_height_imperial_feet">HEIGHT (feet)</string>
    <string name="txt_hint_height_imperial_inch">HEIGHT (inches)</string>
    <string name="history">HISTORY</string>
    <string name="exercise_completed">EXERCISE COMPLETED</string>
    <string name="txt_no_data_available">NO DATA AVAILABLE</string>
</resources>