<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinishActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_finish_activity"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white"
        />

    <TextView
        android:id="@+id/tvEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/text_end"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/end_text_size"
        />

    <LinearLayout
        android:layout_width="@dimen/start_button_size"
        android:layout_height="@dimen/start_button_size"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/item_circular_color_accent_border"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_action_done"
            />


    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/text_congratulations"
        android:textSize="@dimen/exercise_text_size"
        android:textColor="@color/colorPrimary"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_workout_finished"
        android:textSize="@dimen/exercise_text_size"
        android:textColor="@color/colorPrimary"
        />

    <Button
        android:id="@+id/btnFinished"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="35dp"
        android:background="@color/colorAccent"
        android:text="@string/text_finish"
        android:textColor="@color/white"
        android:textSize="@dimen/exercise_text_size"
        />

</LinearLayout>