<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BMIActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_bmi_activity"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white"
        />

    <RadioGroup
        android:id="@+id/rgUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_bmi_activity"
        android:layout_margin="10dp"
        android:background="@drawable/drawable_radio_group_tab_background"
        android:orientation="horizontal"
        >

        <RadioButton
            android:id="@+id/rbMetricUnits"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/drawable_units_tab_selector"
            android:checked="true"
            android:text="METRIC UNITS"
            android:gravity="center"
            android:textColor="@drawable/drawable_units_tab_text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold"
            android:button="@null"

            />

        <RadioButton
            android:id="@+id/rbImperialUnits"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/drawable_units_tab_selector"
            android:checked="false"
            android:text="IMPERIAL UNITS"
            android:gravity="center"
            android:textColor="@drawable/drawable_units_tab_text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold"
            android:button="@null"

            />


    </RadioGroup>

    <LinearLayout
        android:id="@+id/llUnitsView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rgUnits"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMetricUnitWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_hint_weight_metric"
            android:inputType="numberDecimal"
            android:textSize="16sp"
            />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMetricUnitHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_hint_height_metric"
            android:inputType="numberDecimal"
            android:textSize="16sp"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etImperialUnitWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_hint_weight_imperial"
            android:inputType="numberDecimal"
            android:textSize="16sp"
            android:visibility="gone"
            />

        <LinearLayout
            android:id="@+id/llImperialUnitsHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:visibility="gone"
            >

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etUsUnitHeightFeet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/txt_hint_height_imperial_feet"
                android:inputType="number"
                android:textSize="16sp"
                android:layout_weight="1"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etUsUnitHeightInch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:hint="@string/txt_hint_height_imperial_inch"
                android:inputType="number"
                android:textSize="16sp"
                android:layout_weight="1"
                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/llDisplayBMIResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            android:visibility="invisible"
            tools:visibility="visible"
            >

            <TextView
                android:id="@+id/tvYourBMI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_yourBMI"
                android:textAllCaps="true"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/tvBMIValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/temp"

                />

            <TextView
                android:id="@+id/tvBMIType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                tools:text="@string/temp"

                />

            <TextView
                android:id="@+id/tvBMIDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                tools:text="@string/temp"

                />


        </LinearLayout>

        <Button
            android:id="@+id/btnCalculateUnits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/colorAccent"
            android:text="@string/calculate"
            android:textColor="@color/white"
            android:layout_marginTop="35dp"
            android:textSize="@dimen/exercise_text_size"
            />
    </LinearLayout>
</RelativeLayout>