<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExerciseActivity"
    android:orientation="vertical">
    
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_exercise_activity"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white"
        android:theme="@style/ToolbarTheme"
        app:titleTextColor="@color/colorPrimary"

        />


    <LinearLayout
        android:id="@+id/llRestView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_exercise_activity"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_ready_for"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/start_button_label_text_size"
            android:textStyle="bold"/>

        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/item_circular_color_accent_border"
            >

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/circular_progress_gray"
                android:indeterminate="false"
                android:max="10"
                android:progress="100"
                android:progressDrawable="@drawable/circular_progress_bar"
                android:rotation="-90"
                />

            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/item_circular_color_accent_background"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/timer_text_size"
                    android:text="@string/timer_start"
                />


            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llExerciseView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_exercise_activity"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible"
        >

        <TextView
            android:id="@+id/tvExerciseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise_name"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/exercise_text_size"
            android:textStyle="bold"/>

        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/item_circular_color_accent_border"
            >

            <ProgressBar
                android:id="@+id/progressBarExercise"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/circular_progress_gray"
                android:indeterminate="false"
                android:max="30"
                android:progress="100"
                android:progressDrawable="@drawable/circular_progress_bar"
                android:rotation="-90"
                />

            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/item_circular_color_accent_background"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvTimerExercise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/timer_text_size"
                    android:text="@string/timer_start"
                    />


            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</RelativeLayout>